[package]
name = "ib2d"
version = "0.1.0"
edition = "2021"
authors = ["Sifi Takashina <sifyfy@sifyfy.dev>"]
description = "incus network bridges to docker registration tool"
homepage = "https://github.com/sifyfy/ib2d"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
env_logger = "0.10"
iptables = "0.5"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
